# tomato_ray

./: .clang-format  .cmake-format.yaml  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  notes.md
data/: tomato_ray.ctm
shaders/: fs_blit.hlsl
src/: tom_app.cc  tom_app.hh  tom_camera.cc  tom_camera.hh  tom_color.hh  tom_core.hh  tom_d3d11.cc  tom_d3d11.hh  tom_dx_error.hh  tom_file_io.cc  tom_file_io.hh  tom_font.cc  tom_font.hh  tom_graphics.cc  tom_graphics.hh  tom_input.cc  tom_input.hh  tom_intrinsic.hh  tom_math.hh  tom_memory.hh  tom_ray.cc  tom_ray.hh  tom_string.hh  tom_texture.hh  tom_time.hh  tom_types.hh  tom_win32.cc  tom_win32.hh  winmain.cc
